--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ libclang==16.0.0
 MarkupSafe==2.1.1
 mccabe==0.6.1
 MouseInfo==0.1.3
-# numpy==1.23.5
+numpy==1.23.5
 oauthlib==3.2.2
 opencv-python==4.4.0.46
 packaging==20.7
