--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ PyMsgBox==1.0.9
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyperclip==1.8.1
-pypiwin32==223
+#pypiwin32==223
 PyRect==0.1.4
 PyScreeze==0.1.26
 PySocks==1.7.1
@@ -96,7 +96,7 @@ pyttsx3==2.90
 PyTweening==1.0.3
 pytz==2022.7.1
 pywhatkit==3.7
-pywin32==300
+#pywin32==300
 pyzmq==22.0.3
 random2==1.0.1
 requests==2.24.0
